syntax = "proto3";

option csharp_namespace = "IdentityService.gRPC";

package identity.token;

service TokenService {
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}
